<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    tools:context=".View.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_marginTop="47dp"
                    android:backgroundTint="#005E4343"
                    app:srcCompat="?attr/actionModeCloseDrawable"
                    app:tint="#000000"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="241dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/txt_titulo_agenda_compromisso"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                app:srcCompat="@drawable/livro_de_visitas" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/txt_criar_compromisso"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTitulo"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ems="10"
                android:hint="@string/txt_edit_titulo"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextData"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ems="10"
                android:hint="@string/txt_edit_data"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextHorario"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ems="10"
                android:hint="@string/txt_edit_horario"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextLocal"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ems="10"
                android:hint="@string/txt_edit_local"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_salvar"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:text="@string/txt_button_salvar" />

                <Button
                    android:id="@+id/button_limpar"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:text="@string/txt_button_limpar" />

            </LinearLayout>

            <Button
                android:id="@+id/button_finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:text="@string/txt_button_finalizar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>